--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
     "bundle-collapser": "^1.3.0",
     "choo": "^6.0.0",
     "font-awesome": "^4.7.0",
+    "request": "^2.81.0",
     "tachyons": "^4.8.1",
     "uglifyify": "^4.0.3",
     "yo-yoify": "^3.7.3"
